created view person.ejs and minor corrections

--- a/views/person.ejs
+++ b/views/person.ejs
@@ -28,7 +28,7 @@
                 <option value="AB-" id="AB-">AB-</option>
                 <option value="O+" id="O+">O+</option>
                 <option value="O-" id="O-">O-</option>
-            </select><br>
+            </select><br><br>
             <input type="submit" value="Submit">
         </form>
     </div>
